# box-arithmetic

./: .gitignore  Cargo.toml  README.md
box-core/: Cargo.toml
box-core/src/: add.rs  derivative.rs  display.rs  from.rs  function.rs  lib.rs  maxel.rs  mul.rs  parser.rs  set.rs  store.rs
wasm/: Cargo.toml
wasm/src/: wasm.rs
wasm/web-ui/: components.json  env.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
wasm/web-ui/src/: App.tsx  globals.css  main.tsx
wasm/web-ui/src/components/: MenuBar.tsx  TipTap.tsx  WordCount.tsx
wasm/web-ui/src/components/ui/: button-group.tsx  marker.tsx
