[workspace]
resolver = "3"
members = ["box-core", "wasm"]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "A crate for Box Arithmetic. This crate defines the fundamental data structure, a mathematical box, and associated methods for doing basic algebraic operations."
categories = ["mathematics"]
keywords = ["box-arithmetic", "multisets", "trees"]
repository = "https://github.com/thomfuhrmann/box-arithmetic.git"
readme = "README.md"
license = "MIT"

[workspace.dependencies]
chumsky = "0.13.0"
colored = "3.1.1"
logos = "0.16.1"
malachite = "0.9.1"
rapidhash = "4.4.1"
strum = { version = "0.28.0", features = ["derive"] }
serde = { version = "1.0.229", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"


[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
