[package]
name = "box-core"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license = { workspace = true }

[features]
default = []

[dependencies]
chumsky = { workspace = true }
colored = { workspace = true }
crossterm = { workspace = true }
logos = { workspace = true }
malachite = { workspace = true }
rapidhash = { workspace = true }
strum = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = { workspace = true }
