[package]
name = "wasm"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["dep:wee_alloc"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
chumsky = { workspace = true }
logos = { workspace = true }
wasm-bindgen = "0.2.126"
wee_alloc = { version = "0.4.5", optional = true }
box-core = { path = "../box-core" }

[dev-dependencies]
wasm-bindgen-test = "0.3.76"
